<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.github.igenius.githubrepositories.repositorieslist.RepositoriesListViewModel" />
    </data>
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/repositories" >

        <ImageView
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorAppBar"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star"
            app:srcCompat="@drawable/ic_github"
            app:tint="?colorSecondary" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:context=".githubrepositories.repositorieslist.RepositoriesListFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:liveData="@{viewModel.reposList}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/noDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                    android:gravity="center"
                    android:text="@string/no_data"
                    android:textSize="@dimen/text_size_large"
                    app:drawableTopCompat="@drawable/ic_no_data"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
