...
        <variable
            name="languageColor"
            type="com.example.github.igenius.githubrepositories.repositorieslist.GithubLanguagesColors" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/repositoriesCardView"
        style="@style/CustomCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        android:fadeVisible="@{true}"
        android:onClick="@{() -> clickListener.onClick(item)}">
...
